# weather-get

./: .gitignore  README.md  pyproject.toml
tests/: test_weather_get.py
weather_get/: __init__.py  weather_api.py  weather_get.py
